# Luantis

./: .build_deps_installed  .gitignore  CMakeLists.txt  ENCRYPTION_DATA_FLOW.md  OPENCLAW_GUIDE.md  PERFORMANCE_V962_RESULTS.md  README.md  RESTRUCTURE_PLAN.md  TODO_FIXME_LIST.md  V9_PLAN.md  ai-agent-instructions.md  ai-codebase-reference.md  build_env.sh  build_linux.sh  build_monitor.sh  debug.txt  download.zi  luanti-project-map.md  luantis  minetest.conf  minetest.conf.example  start_client.sh  start_server.sh  test-zai.sh  test_build_linux.sh  test_encryption_toggle.sh  test_fixes.sh  test_log_toggle.sh  test_start_client.sh  test_start_server.sh  toolchain-local.cmake  worklog.md
builtin/: settingtypes.txt
cache/: common.conf
clay_test/: clay_test  clay_test.c  render_clay_log.py  theme_test.cpp  validate_theme.py
client_ed25519_keys/: singleplayer.key
doc/: direction.md
docs/: GUI_EDITING_GUIDE.md  OPENSECURE_GUIDE.md  README.md  RUST_PORT_PLAN.md  TODO_FIXME_LIST.md  V9_PLAN.md  ai-agent-instructions.md  ai-codebase-reference.md  direction.md  fst_api.txt  lua_api.md  lua_api.txt  luanti-project-map.md  sscsm_security.md
gui_test/: gui_e2e_screenshots.py  gui_theme_test  gui_theme_test.cpp  gui_theme_video.py  gui_theme_visual_test.py
lib/clay/: CMakeLists.txt  clay_impl.c
scripts/: verify_encryption_pcap.py
src/: CMakeLists.txt  chat.cpp  chat.h  cmake_config.h.in  collision.cpp  constants.h  content_nodemeta.cpp  craftdef.cpp  defaultsettings.cpp  dummygamedef.h  dummymap.h  emerge.cpp  emerge.h  emerge_internal.h  environment.cpp  filesys.cpp  (+65 more)
(+456 files in other folders)
